--- a/.editorconfig
+++ b/.editorconfig
@@ -369,3 +369,6 @@ dotnet_naming_style.s_camelcase.required_prefix = s_
 dotnet_naming_style.s_camelcase.required_suffix =
 dotnet_naming_style.s_camelcase.word_separator =
 dotnet_naming_style.s_camelcase.capitalization = camel_case
+
+# Disable analyzer rules
+dotnet_diagnostic.CA1707.severity = none # allow underscore test
