init: setup scrape service

--- a/apps/service-scrape/function-batchScrapeSuburbs/src/appsettings.Production.json
+++ b/apps/service-scrape/function-batchScrapeSuburbs/src/appsettings.Production.json
@@ -1,16 +1,12 @@
 {
   "Serilog": {
-    "Properties": {
-      "ApplicationName": "batchScrapeSuburbs"
-    },
-    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.OpenTelemetry"],
+    "Using": ["Serilog.Sinks.OpenTelemetry"],
     "MinimumLevel": "Information",
     "WriteTo": [
-      { "Name": "Console" },
       {
         "Name": "OpenTelemetry",
         "Args": {
-          "endpoint": "http://localhost:5341/ingest/otlp/v1/logs",
+          "endpoint": "https://api.axiom.co/v1/traces",
           "protocol": "HttpProtobuf"
         }
       }
