--- a/apps/service-scrape/function-batchScrapeSuburbs/package.json
+++ b/apps/service-scrape/function-batchScrapeSuburbs/package.json
@@ -7,21 +7,23 @@
     "test:unit": "vitest run",
     "test:unit:dev": "vitest",
     "test:type": "tsc",
-    "dev": "nodemon src/index.mts"
+    "dev": "vite dev"
   },
   "devDependencies": {
-    "@hono/node-server": "1.13.8",
-    "@types/aws-lambda": "8.10.147",
-    "aws-lambda": "1.0.7",
+    "@hono/vite-dev-server": "0.18.1",
     "dotenv": "16.4.7"
   },
   "dependencies": {
-    "@opentelemetry/instrumentation-pino": "0.46.0",
+    "@opentelemetry/api": "1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "0.56.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "0.57.2",
+    "@opentelemetry/resources": "1.30.1",
     "@opentelemetry/sdk-node": "0.57.2",
+    "@opentelemetry/sdk-trace-base": "1.30.1",
+    "@opentelemetry/semantic-conventions": "1.30.0",
     "cheerio": "1.0.0",
     "hono": "4.7.1",
-    "pino": "9.6.0",
-    "pino-pretty": "13.0.0",
     "zod": "3.24.2"
-  }
+  },
+  "type": "module"
 }
