--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
     "@changesets/changelog-github": "0.5.1",
     "@changesets/cli": "2.28.0",
     "@types/node": "22.13.4",
-    "esbuild": "0.25.0",
     "knip": "5.43.6",
-    "nodemon": "3.1.9",
     "rimraf": "6.0.1",
     "simple-git-hooks": "2.11.1",
-    "ts-node": "10.9.2",
     "typescript": "5.7.3",
+    "vite": "6.1.1",
     "vitest": "3.0.5"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm run format",
     "pre-push": "pnpm run format"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.12.3",
+  "type": "module"
 }
