--- a/biome.json
+++ b/biome.json
@@ -11,6 +11,12 @@
       "recommended": true,
       "complexity": {
         "useLiteralKeys": "off"
+      },
+      "suspicious": {
+        "noExplicitAny": "off"
+      },
+      "style": {
+        "noArguments": "off"
       }
     }
   },
@@ -21,7 +27,11 @@
     }
   },
   "files": {
-    "ignore": ["coverage", "dist", "node_modules"],
+    "ignore": [
+      "coverage",
+      "dist",
+      "node_modules"
+    ],
     "ignoreUnknown": true
   }
 }
