--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "knip": "5.43.6",
     "rimraf": "6.0.1",
     "simple-git-hooks": "2.11.1",
+    "tsup": "8.3.6",
     "typescript": "5.7.3",
     "vite": "6.1.1",
     "vitest": "3.0.5"
