--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -7,16 +7,17 @@
     "docker:up": "docker-compose up --build -d && drizzle-kit push --config ./test/drizzle.config.ts --force true",
     "generate": "drizzle-kit generate",
     "test:lint": "biome lint --write",
-    "test:unit": "docker:up & vitest run && docker:down",
+    "test:unit": "pnpm docker:up && vitest run && docker:down",
     "test:type": "tsc"
   },
   "dependencies": {
     "dotenv": "16.4.7",
-    "drizzle-orm": "0.39.3",
-    "drizzle-zod": "0.7.0",
+    "kysely": "0.27.5",
+    "pg": "8.13.3",
     "postgres": "3.4.5"
   },
   "devDependencies": {
+    "@types/pg": "8.11.11",
     "drizzle-kit": "0.30.4"
   },
   "type": "module"
