--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -5,13 +5,14 @@
     "format": "biome format --write",
     "docker:down": "docker-compose down -v",
     "docker:up": "docker-compose up --build -d && drizzle-kit push --config ./test/drizzle.config.ts --force true",
-    "generate": "drizzle-kit generate",
+    "generate": "drizzle-kit generate --name",
     "test:lint": "biome lint --write",
     "test:unit": "pnpm docker:up && vitest run && docker:down",
     "test:type": "tsc"
   },
   "dependencies": {
     "dotenv": "16.4.7",
+    "drizzle-orm": "0.39.3",
     "kysely": "0.27.5",
     "pg": "8.13.3",
     "postgres": "3.4.5"
