chore: remove null assertion

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,8 @@
         "noExplicitAny": "off"
       },
       "style": {
-        "noArguments": "off"
+        "noArguments": "off",
+        "noNonNullAssertion": "off"
       }
     }
   },
