--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -2,8 +2,19 @@
   "name": "@service-scrape/lib-db_service_scrape",
   "version": "1.0.0",
   "private": "true",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    "import": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "require": "./dist/index.cjs"
+    }
+  },
   "files": ["dist"],
   "scripts": {
     "format": "biome format --write",
@@ -15,8 +26,7 @@
     "test:lint": "biome lint --write",
     "test:perf": "pnpm docker:up && vitest bench --run && pnpm docker:down",
     "test:type": "tsc",
-    "test:build": "attw -P .",
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap"
+    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap && attw -P ."
   },
   "dependencies": {
     "dotenv": "16.4.7",
