--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.3",
+    "drizzle-zod": "0.7.0",
     "kysely": "0.27.5",
     "pg": "8.13.3",
     "postgres": "3.4.5"
