--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "function-batch_scrape_suburbs",
+  "name": "@service-scrape/function-batch_scrape_suburbs",
   "version": "1.0.0",
   "scripts": {
     "format": "biome format --write",
@@ -15,15 +15,17 @@
   },
   "dependencies": {
     "@opentelemetry/api": "1.9.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "0.57.2",
+    "@opentelemetry/exporter-logs-otlp-proto": "0.57.2",
     "@opentelemetry/exporter-trace-otlp-proto": "0.57.2",
-    "@opentelemetry/host-metrics": "0.35.5",
-    "@opentelemetry/sdk-metrics": "1.30.1",
+    "@opentelemetry/resources": "1.30.1",
+    "@opentelemetry/sdk-logs": "0.57.2",
     "@opentelemetry/sdk-node": "0.57.2",
     "@opentelemetry/sdk-trace-base": "1.30.1",
+    "@opentelemetry/semantic-conventions": "1.30.0",
     "cheerio": "1.0.0",
     "hono": "4.7.1",
-    "zod": "3.24.2"
+    "zod": "3.24.2",
+    "@service-scrape/lib-db_service_scrape": "workspace:*"
   },
   "type": "module"
 }
