--- a/apps/service-scrape/template.yaml
+++ b/apps/service-scrape/template.yaml
@@ -13,26 +13,27 @@ Globals:
     Handler: index.handler
 
 Resources:
-  # BatchTrigger:
-  #   Type: AWS::Serverless::Function
-  #   Properties:
-  #     Timeout: 60 # Jobs may come in various sizes
-  #     MemorySize: 256 # Limit CPU to throttle scraping
-  #     CodeUri: ./function-batchTrigger/src/
-  #     Events:
-  #       Cron:
-  #         Type: Schedule
-  #         Properties:
-  #           Schedule: cron(0 3 * * Sat) # 3am Sat UTC => 1pm Sat AEST
-  #           Name: BatchTriggerEvent
-  #     Environment:
-  #       Variables:
-  #         BATCHSCRAPESUBURBSQUEUE_QUEUE_NAME: !GetAtt BatchScrapeSuburbsQueue.QueueName
-  #         BATCHSCRAPESUBURBSQUEUE_QUEUE_ARN: !GetAtt BatchScrapeSuburbsQueue.Arn
-  #         BATCHSCRAPESUBURBSQUEUE_QUEUE_URL: !Ref BatchScrapeSuburbsQueue
-  #     Policies:
-  #       - SQSSendMessagePolicy:
-  #           QueueName: !GetAtt BatchScrapeSuburbsQueue.QueueName
+  BatchTrigger:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 60 # Jobs may come in various sizes
+      MemorySize: 256 # Limit CPU to throttle scraping
+      CodeUri: ./function-batch_trigger/src/
+      Events:
+        Cron:
+          Type: Schedule
+          Properties:
+            # 10pm Fri UTC => 8am Sat AEST
+            Schedule: cron(0 22 ? * 6 *)
+            Name: BatchTriggerEvent
+      Environment:
+        Variables:
+          BATCHSCRAPESUBURBSQUEUE_QUEUE_NAME: !GetAtt BatchScrapeSuburbsQueue.QueueName
+          BATCHSCRAPESUBURBSQUEUE_QUEUE_ARN: !GetAtt BatchScrapeSuburbsQueue.Arn
+          BATCHSCRAPESUBURBSQUEUE_QUEUE_URL: !Ref BatchScrapeSuburbsQueue
+      Policies:
+        - SQSSendMessagePolicy:
+            QueueName: !GetAtt BatchScrapeSuburbsQueue.QueueName
   BatchScrapeSuburbsQueue:
     Type: AWS::SQS::Queue
     Properties:
@@ -51,7 +52,7 @@ Resources:
     Properties:
       Timeout: 900 # Jobs may come in various sizes
       MemorySize: 256 # Limit CPU to throttle scraping
-      CodeUri: ./function-batchScrapeSuburbs/src/
+      CodeUri: ./function-batch_scrape_suburbs/src/
       Events:
         SQS:
           Type: SQS
@@ -71,18 +72,18 @@ Resources:
           - "@aws-sdk/*"
           - aws-sdk
         Minify: false
-  # ReadOLTP:
-  #   Type: AWS::Serverless::Function
-  #   Properties:
-  #     ReservedConcurrentExecutions: 10 # Prevent database overload
-  #     Timeout: 3
-  #     CodeUri: ./function-readOLTP/src/
-  #     Events:
-  #       Api:
-  #         Type: Api
-  #         Properties:
-  #           Path: /{proxy+}
-  #           Method: get # Cacheable
+  ReadPublic:
+    Type: AWS::Serverless::Function
+    Properties:
+      ReservedConcurrentExecutions: 10 # Prevent database overload
+      Timeout: 3
+      CodeUri: ./function-read_public/src/
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /{proxy+}
+            Method: get # Cacheable
 
 Outputs:
   EnspointUrl:
