chore: move script execution responsiobility to script module

--- a/apps/service-scrape/package.json
+++ b/apps/service-scrape/package.json
@@ -2,8 +2,8 @@
   "name": "service-scrape",
   "version": "1.0.0",
   "scripts": {
+    "test": "pnpm /test:.*/",
     "test:lint": "sam validate --lint",
-    "compress:data": "node ./script/compress.ts",
     "build:sam": "sam build"
   }
 }
