ci: simplify test script and reccursive execution

--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "format": "biome format --write",
+    "test": "pnpm run /^test:/",
     "test:lint": "biome lint --write",
-    "test:unit": "vitest run",
-    "test:unit:dev": "vitest",
     "test:type": "tsc",
+    "test:unit": "vitest run",
+    "dev:test:unit": "vitest",
     "dev": "vite dev"
   },
   "devDependencies": {
