--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tsup": "8.3.6",
     "typescript": "5.7.3",
     "vite": "6.1.1",
-    "vitest": "3.0.5"
+    "vitest": "3.0.5",
+    "nx": "20.4.6"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm run format",
