--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -35,7 +35,8 @@
     "drizzle-zod": "0.7.0",
     "kysely": "0.27.5",
     "pg": "8.13.3",
-    "postgres": "3.4.5"
+    "postgres": "3.4.5",
+    "zod": "3.24.2"
   },
   "devDependencies": {
     "@faker-js/faker": "9.5.0",
