--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "0.17.3",
     "@biomejs/biome": "1.9.4",
-    "@changesets/changelog-github": "0.5.1",
-    "@changesets/cli": "2.28.0",
     "@types/node": "22.13.4",
     "knip": "5.43.6",
-    "rimraf": "6.0.1",
     "simple-git-hooks": "2.11.1",
     "tsup": "8.3.6",
     "typescript": "5.7.3",
@@ -25,8 +22,7 @@
     "nx": "20.4.6"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm run format",
-    "pre-push": "pnpm run format"
+    "pre-commit": "pnpm format"
   },
   "packageManager": "pnpm@9.12.3",
   "type": "module"
