--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,8 +36,10 @@ jobs:
           node-version:
           cache: 'pnpm'
 
-      - name: Setup docker
-        uses: docker/setup-docker-action@v4
+      - name: Setup docker-compose
+        uses: docker/setup-compose-action@v1
+        with:
+          version: latest
 
       - name: Install dependencies
         run: pnpm i
