--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version:
+          node-version: latest
           cache: 'pnpm'
 
       - name: Install dependencies
