--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "0.17.3",
     "@biomejs/biome": "1.9.4",
+    "@parcel/packager-ts": "2.13.3",
+    "@parcel/transformer-typescript-types": "2.13.3",
     "@types/node": "22.13.4",
     "@vitest/coverage-v8": "3.0.7",
     "knip": "5.43.6",
     "nx": "20.4.6",
+    "parcel": "2.13.3",
     "simple-git-hooks": "2.11.1",
-    "tsup": "8.3.6",
     "typescript": "5.7.3",
     "vite": "6.1.1",
     "vitest": "3.0.7"
