--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@service-scrape/function-batch_scrape_suburbs",
+  "private": "true",
   "version": "1.0.0",
   "scripts": {
     "format": "biome format --write",
+    "test": "pnpm run /^test:/",
     "test:lint": "biome lint --write",
-    "test:unit": "vitest run",
-    "test:unit:dev": "vitest",
     "test:type": "tsc",
+    "test:unit": "vitest run --coverage",
+    "dev:test:unit": "vitest --coverage",
     "dev": "vite dev"
   },
   "devDependencies": {
@@ -22,10 +24,10 @@
     "@opentelemetry/sdk-node": "0.57.2",
     "@opentelemetry/sdk-trace-base": "1.30.1",
     "@opentelemetry/semantic-conventions": "1.30.0",
+    "@service-scrape/lib-db_service_scrape": "workspace:*",
     "cheerio": "1.0.0",
     "hono": "4.7.1",
-    "zod": "3.24.2",
-    "@service-scrape/lib-db_service_scrape": "workspace:*"
+    "zod": "3.24.2"
   },
   "type": "module"
 }
