--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -2,39 +2,33 @@
   "name": "@service-scrape/lib-db_service_scrape",
   "version": "1.0.0",
   "private": "true",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    "import": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    },
-    "require": {
-      "types": "./dist/index.d.cts",
-      "require": "./dist/index.cjs"
-    }
-  },
+  "source": "src/index.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
     "format": "biome format --write",
-    "docker:down": "docker-compose down -v",
-    "docker:up": "docker-compose up --build -d && sleep 1 && drizzle-kit push --config ./test/drizzle.config.ts --force true",
-    "studio": "drizzle-kit studio --config ./test/drizzle.config.ts",
+    "docker:down": "docker compose down -v",
+    "docker:up": "docker compose up --build -d && sleep 1 && drizzle-kit push",
+    "studio": "drizzle-kit studio",
     "generate": "drizzle-kit generate --name",
-    "migrate": "drizzle-kit generate migrate --config ./src/drizzle.config.ts",
+    "migrate": "drizzle-kit generate migrate",
+    "test": "pnpm run /^test:/",
     "test:lint": "biome lint --write",
     "test:perf": "pnpm docker:up && vitest bench --run && pnpm docker:down",
     "test:type": "tsc",
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap && attw -P ."
+    "build": "parcel build"
   },
   "dependencies": {
+    "consola": "3.4.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.3",
     "drizzle-zod": "0.7.0",
     "kysely": "0.27.5",
     "pg": "8.13.3",
-    "postgres": "3.4.5"
+    "postgres": "3.4.5",
+    "zod": "3.24.2"
   },
   "devDependencies": {
     "@faker-js/faker": "9.5.0",
