--- a/package.json
+++ b/package.json
@@ -2,28 +2,29 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "format": "pnpm -r format",
-    "test:lint": "pnpm -r test:lint",
-    "test:unit": "pnpm -r test:unit",
-    "knip": "knip"
+    "format": "nx run-many -t format",
+    "test": "nx run-many -t test:lint test:type test:unit test:perf",
+    "build": "nx run-many -t build",
+    "knip": "knip",
+    "build:ci": "nx affected -t build",
+    "test:ci": "nx affected -t test:lint test:type test:unit test:perf"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "0.17.3",
     "@biomejs/biome": "1.9.4",
-    "@changesets/changelog-github": "0.5.1",
-    "@changesets/cli": "2.28.0",
+    "@parcel/packager-ts": "2.13.3",
+    "@parcel/transformer-typescript-types": "2.13.3",
     "@types/node": "22.13.4",
+    "@vitest/coverage-v8": "3.0.7",
     "knip": "5.43.6",
-    "rimraf": "6.0.1",
+    "nx": "20.4.6",
+    "parcel": "2.13.3",
     "simple-git-hooks": "2.11.1",
-    "tsup": "8.3.6",
     "typescript": "5.7.3",
     "vite": "6.1.1",
-    "vitest": "3.0.5"
+    "vitest": "3.0.7"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm run format",
-    "pre-push": "pnpm run format"
+    "pre-commit": "pnpm format"
   },
   "packageManager": "pnpm@9.12.3",
   "type": "module"
