--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@service-scrape/lib-db_service_scrape",
   "version": "1.0.0",
-  "private": "true",
   "source": "src/index.ts",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -24,6 +23,7 @@
   "dependencies": {
     "consola": "3.4.0",
     "dotenv": "16.4.7",
+    "drizzle-kit": "0.30.4",
     "drizzle-orm": "0.39.3",
     "drizzle-zod": "0.7.0",
     "kysely": "0.27.5",
@@ -33,8 +33,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "9.5.0",
-    "@types/pg": "8.11.11",
-    "drizzle-kit": "0.30.4"
+    "@types/pg": "8.11.11"
   },
   "type": "module"
 }
