--- a/apps/service-scrape/package.json
+++ b/apps/service-scrape/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-scrape",
+  "name": "@service-scrape/root",
   "version": "1.0.0",
   "scripts": {
     "test": "pnpm /test:.*/",
