chore: docker up down

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,10 +43,10 @@ jobs:
         run: pnpm build:ci
 
       - name: Docker compose up
-        run: pnpm docker:up:ci
+        run: pnpm docker:up
 
       - name: Test
         run: pnpm test:ci
 
       - name: Docker compose down
-        run: pnpm docker:down:ci
+        run: pnpm docker:down
