--- a/apps/service-scrape/lib-db_service_scrape/package.json
+++ b/apps/service-scrape/lib-db_service_scrape/package.json
@@ -4,7 +4,9 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.cts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "format": "biome format --write",
     "docker:down": "docker compose down -v",
@@ -17,7 +19,7 @@
     "test:type": "tsc",
     "test:unit": "vitest run --coverage",
     "dev:test:unit": "vitest --coverage",
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap && attw -P ."
+    "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap"
   },
   "dependencies": {
     "consola": "3.4.0",
