--- a/apps/service-scrape/lib-db_service_scrape/docker-compose.yaml
+++ b/apps/service-scrape/lib-db_service_scrape/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   db:
-    image: postgres:15.8-bookworm
+    build:
+      dockerfile: postgis.dockerfile
     ports:
       - "54320:5432"
     environment:
