--- a/apps/service-scrape/function-batch_scrape_suburbs/package.json
+++ b/apps/service-scrape/function-batch_scrape_suburbs/package.json
@@ -23,6 +23,7 @@
     "@opentelemetry/sdk-trace-base": "1.30.1",
     "@opentelemetry/semantic-conventions": "1.30.0",
     "@service-scrape/lib-db_service_scrape": "workspace:*",
+    "@turf/turf": "7.2.0",
     "cheerio": "1.0.0",
     "dotenv": "16.4.7",
     "hono": "4.7.1",
