--- a/apps/service-scrape/Lib_DbServiceScrape/build.gradle
+++ b/apps/service-scrape/Lib_DbServiceScrape/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 
 plugins {
   id 'java-library'
+  id 'com.diffplug.spotless' version '7.0.4'
   id 'org.flywaydb.flyway' version '11.9.1'
   id 'org.jooq.jooq-codegen-gradle' version '3.19.23'
 }
@@ -59,6 +60,14 @@ test {
   useJUnitPlatform()
 }
 
-tasks.named('jooqCodegen').configure {
+jooqCodegen {
   dependsOn tasks.named('flywayMigrate')
+}
+
+spotless {
+  java {
+    importOrder()
+    // removeUnusedImports()
+    palantirJavaFormat()
+  }
 }
