--- a/apps/service-scrape/Lib_DbServiceScrape/build.gradle
+++ b/apps/service-scrape/Lib_DbServiceScrape/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+  implementation 'org.jooq:jooq:3.19.23'
   implementation 'org.postgresql:postgresql:42.7.6'
   testImplementation platform('org.junit:junit-bom:5.12.2')
   testImplementation 'org.junit.jupiter:junit-jupiter'
