--- a/apps/service-scrape/Lib_DbServiceScrape/build.gradle
+++ b/apps/service-scrape/Lib_DbServiceScrape/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
   dependencies {
     classpath 'org.flywaydb:flyway-database-postgresql:11.9.1'
-    classpath 'nu.studer:gradle-jooq-plugin:1.0.5'
     classpath 'org.postgresql:postgresql:42.7.6'
   }
 }
@@ -18,6 +17,7 @@ repositories {
 }
 
 dependencies {
+  implementation 'com.google.googlejavaformat:google-java-format:1.24.0'
   implementation 'org.jooq:jooq:3.19.23'
   implementation 'org.postgresql:postgresql:42.7.6'
   testImplementation platform('org.junit:junit-bom:5.12.2')
@@ -45,6 +45,7 @@ jooq {
     }
     generator {
       database {
+        // Limited inclusions to exclude PostGis stuff
         includes = '.*_table' +
           '|.*_enum'
         inputSchema = "public"
@@ -59,16 +60,16 @@ jooq {
 
 test {
   useJUnitPlatform()
-}
-
-jooqCodegen {
-  dependsOn tasks.named('flywayMigrate')
+  testLogging {
+    // Log stack trace for failed tests
+    exceptionFormat = 'full'
+  }
 }
 
 spotless {
   java {
     importOrder()
-    // removeUnusedImports()
+    removeUnusedImports()
     palantirJavaFormat()
   }
 }
